# UW-SDIC_2D_CAD_projection_defect_transfer

./: CMakeCache.txt  CMakeLists.txt  ReadMe.md  build.sh  package.xml
config/: Extrinsics.json  Intrinsics.json  Radtan_test.json  SolutionParameters.json  controller_config.yaml
include/: CeresCameraCostFunction.hpp  CeresOptimizer.hpp  CeresReprojectionCostFunction.hpp  ImageBuffer.h  ImageBuffer.hpp  Optimizer.hpp  Solver.h  Solver.hpp  imageReader.h  imageReader.hpp  solver.hpp  util.h  util.hpp  visualizer.h  visualizer.hpp
includes/: imageReader.h  solver.h  visualizer.h
src/: .gitignore  CeresOptimizer.cpp  ImageBuffer.cpp  Optimizer.cpp  P210_north.json  P210_north_crackmap.json  Solver.cpp  imageReader.cc  imageReader.cpp  main.cc  main.cpp  solver.cc  solver.cpp  util.cpp  visualizer.cc  visualizer.cpp
tests/: ceres_camera_test.cpp
tests/src/: back_project_test.cpp  cad_image_scale_test.cpp  convergence_check_test.cpp  ladybug_images_test.cpp  load_pose_test.cpp  simulation_test.cpp
tests/src/heuristics/: ceres_iterations_test.cpp
tests/test_data/labelled_images/: -0.000000_-1.000000.json  -0.000000_0.000000.json  -0.000000_1.000000.json  -1.000000_-1.000000.json  -1.000000_0.000000.json  -1.000000_1.000000.json  -3.000000_0.000000.json  1.000000_-1.000000.json  1.000000_0.000000.json  1.000000_1.000000.json  sim_CAD.json
tests/test_data/poses/: -0.000000_-1.000000.json  -0.000000_0.000000.json  -0.000000_1.000000.json  -1.000000_-1.000000.json  -1.000000_0.000000.json  -1.000000_1.000000.json  -3.000000_0.000000.json  1.000000_-1.000000.json  1.000000_1.000000.json  camera_model_corr.json  camera_robot.json  struct_world.json
